--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="module" src="index.ts"></script>
+    <script type="module" src="script.ts"></script>
 </body>
 </html>
